- Fix convertToImageString function for blank images. - Implement UserPhotoForm component for better readability. - Fix countless rendering of the Cropper component. - PhotoSection refactoring. - Implemented validation for saved form data.

--- a/src/features/ResumeTemplate/components/PhotoSection/PhotoSection.module.scss
+++ b/src/features/ResumeTemplate/components/PhotoSection/PhotoSection.module.scss
@@ -5,9 +5,10 @@
   @include Flex(center, center);
   max-width: $fourthSectionWidth;
   overflow: hidden;
+  text-align: center;
 
   &_photo {
-    width: 100%;
+    width: $fourthSectionWidth;
     height: auto;
     object-fit: cover;
   }
